--- a/index.html
+++ b/index.html
@@ -561,6 +561,12 @@
 <p><a href="https://raw.githubusercontent.com/mbadolato/iTerm2-Color-Schemes/master/schemes/Hybrid.itermcolors"><strong>Hybrid</strong></a></p>
 <p><img src="https://raw.githubusercontent.com/mbadolato/iTerm2-Color-Schemes/master/screenshots/hybrid.png" alt="Screenshot"></p>
 
+<p><a href="https://raw.githubusercontent.com/mbadolato/iTerm2-Color-Schemes/master/schemes/IBM 5153 CGA.itermcolors"><strong>IBM 5153 CGA</strong></a></p>
+<p><img src="https://raw.githubusercontent.com/mbadolato/iTerm2-Color-Schemes/master/screenshots/ibm-5153-cga.png" alt="Screenshot"></p>
+
+<p><a href="https://raw.githubusercontent.com/mbadolato/iTerm2-Color-Schemes/master/schemes/IBM 5153 CGA (Black).itermcolors"><strong>IBM 5153 CGA (Black)</strong></a></p>
+<p><img src="https://raw.githubusercontent.com/mbadolato/iTerm2-Color-Schemes/master/screenshots/ibm-5153-cga-black.png" alt="Screenshot"></p>
+
 <p><a href="https://raw.githubusercontent.com/mbadolato/iTerm2-Color-Schemes/master/schemes/IC_Green_PPL.itermcolors"><strong>IC_Green_PPL</strong></a></p>
 <p><img src="https://raw.githubusercontent.com/mbadolato/iTerm2-Color-Schemes/master/screenshots/ic-green-ppl.png" alt="Screenshot"></p>
 
